--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>All About Halloween</title>
 
     <!-- stylesheet link below -->
-
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <img src="img/ghost.jpg" alt="An image of a ghost in the woods.">
     <p>
         Halloween, or All Hallows' Eve, is an annual holiday celebrated on October 31. Its origins can be traced back to
-        the ancient Celtic festival of Samhain. At that time, it was believed that the boundary between the living and
+        the ancient Celtic festival of samian. At that time, it was believed that the boundary between the living and
         the dead blurred, allowing spirits to walk the earth.
     </p>
 
