--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <h1>The Spooky History of Halloween</h1>
-    <img src="img/ghost.jpg" alt="An image of a ghost in the woods.">
+    <img src="img/ghost.jpg" alt="An image of a ghost in the woods." class="center">
     <p>
         Halloween, or All Hallows' Eve, is an annual holiday celebrated on October 31. Its origins can be traced back to
         the ancient Celtic festival of samian. At that time, it was believed that the boundary between the living and
